--- a/src/components/Container/Footer/footer.css
+++ b/src/components/Container/Footer/footer.css
@@ -1,7 +1,10 @@
 .footer-container {
     display: flex;
+    flex-direction: column;
     position: relative;
     bottom: 0;
     justify-content: center;
     align-items: center;
+    background-color: var(--BG_NAV);
+    line-height: 36px;
 }
