--- a/src/components/Container/Header/header.css
+++ b/src/components/Container/Header/header.css
@@ -1,9 +1,12 @@
 .header-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto 10%;
+    gap: 2rem;
     flex-direction: row;
     justify-content: space-around;
+
     align-items: center;
-    line-height: 72px;
+    line-height: 48px;
     background-color: var(--BG_NAV);
     position: sticky;
     top: 0;
@@ -16,17 +19,64 @@
     font-size: larger;
 }
 
-a {
-    line-height: 25px;
-    padding: 0.3px 3px 5.4px 5px;
-    background-color: var(--BG_CARD);
+.header-conatiner_search {
+    display: flex;
+    flex-direction: column;
+}
+
+.border-right-radius {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 .input {
+    position: static;
+
     border: none;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius:5px ;
-    width: 200px;
+    border-radius: 5px;
+    width: 20rem;
+    line-height: 40px;
+}
+
+.search-list {
+    position: absolute;
+    top: 56px;
+    padding: 0 2rem 1rem 2rem;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: var(--BG_NAV);
+}
+
+.search-list li {
+    list-style: none; 
+    line-height: 32px;
+}
+
+.search-list li button {
     line-height: 25px;
+    border: none;
+    background-color: var(--BG_CARD);
+    border-radius: 5px;
+    transition: transform 0.3 ease-in-out;
+}
+
+.search-list li button:hover,button:focus {
+    transform: scale(1.3);
+    filter: brightness(150%);
+}
+
+.d-none {
+    display: none;
+}
+.city h3 {
+    background-color: var(--BG_CARD);
+    border: 2px solid var(--B_GRAY);
+    border-radius: 2px;
+    padding: 0 0.5rem;
+
+}
+.city {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
