--- a/src/components/Container/Header/header.css
+++ b/src/components/Container/Header/header.css
@@ -2,9 +2,7 @@
     display: grid;
     grid-template-columns: auto auto 10%;
     gap: 2rem;
-    flex-direction: row;
     justify-content: space-around;
-
     align-items: center;
     line-height: 48px;
     background-color: var(--BG_NAV);
@@ -43,6 +41,7 @@
     padding: 0 2rem 1rem 2rem;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    border-radius: 5px;
     background-color: var(--BG_NAV);
 }
 
@@ -78,5 +77,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: static;
+}
+
+
+
+@media screen and (min-width: 2000px) {
+    .input {
+        position: static;
+        font-size: xx-large;
+        width: 30rem;
+        line-height: 70px;
+    }
+  }
+
+
+@media screen and (max-width: 768px) {
+    .header-container {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        justify-content: flex-start;
+        align-items: center;
+        line-height: 20px;
+    }
+    .header-container_logo {
+        padding: 10px 0;
+    }
+    .search-list {
+        position: fixed;
+        top: 75px;
+        padding: 0 2rem 1rem 2rem;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-radius: 5px;
+        background-color: rgba(51, 51, 51, 0.822);
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .header-container {
+        position: relative;   
+    }
+    .search-list {
+        position: absolute;
+        padding: 0 1rem 1rem 1rem;
+    }
+    .input {
+        width: 15rem;
+        line-height: 35px;
+    }
 }
