--- a/src/components/Container/container.css
+++ b/src/components/Container/container.css
@@ -5,3 +5,14 @@
     width: 80%;
     gap: 1rem;
 }
+
+@media screen and (max-width: 425px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        width: 100%;
+        gap: 1rem;
+        margin: 0 1rem;
+    }
+}
