--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ body {
   min-height: 100vh;
 }
 
+@media screen and (min-width: 2000px) {
+  :root {
+    line-height: 2;
+    font-size: xx-large;
+  }
+}
 
 
 
